fix CSS on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -709,10 +709,18 @@ font-size: 18px;
 
 /* Tablet device */
 @media (max-width: 991px) and (min-width: 768px) {
-  .nav-tabs-default .tab-pane .nav-tabs > li > a { padding-left: 20px; padding-right: 20px; }
+  .nav-tabs-default .tab-pane  > a { padding-left: 20px; padding-right: 20px; }
   .nav-tabs-default .tab-pane .nav-tabs.nav-justified > li > a { padding-left: 5px; padding-right: 5px; }
-
-  #hero .hero-big { font-size: 130px; }
   .navigation-bar-header .navigation-bar > li a { padding-left: 5px; padding-right: 5px; font-size: 16px; }
 }
 
+/* Small Screens AND Tablets */
+@media (max-width: 991px) {
+  .nav-tabs > li {
+    float: none;
+    width: 100%;
+  }
+  .nav-tabs-default .nav-tabs li {
+    width: 100%;
+  }
+}
